# d2statcord

./: Cargo.toml
src/: main.rs
src/commands/: weapon.rs
